--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,9 +1,10 @@
 FROM python:3.10-slim
-RUN pip install --no-cache-dir --progress-bar off flask
-RUN pip install --no-cache-dir --progress-bar off pymongo
-COPY  ./static /home/Desktop/ipa2025-msapp/static/
-COPY  ./templates /home/Desktop/ipa2025-msapp/templates/
-COPY  app.py /home/Desktop/ipa2025-msapp/
+WORKDIR /home/ubuntu/Desktop/ipa2025-msapp/web
+COPY requirements.txt .
+COPY  ./static ./static/
+COPY  ./templates ./templates/
+COPY  ./app.py .
+RUN pip install --no-cache-dir --progress-bar off -r requirements.txt
 EXPOSE 8080
-CMD python /home/Desktop/ipa2025-msapp/app.py
+CMD python app.py
 
