--- a/web/manifests/application.yaml
+++ b/web/manifests/application.yaml
@@ -11,7 +11,7 @@ spec:
     path: web/manifests
   destination:
     server: https://kubernetes.default.svc
-    namespace: devops-tools
+    namespace: ipa2025
   syncPolicy:
     automated:
       prune: true
