--- a/web/application.yaml
+++ b/web/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: ipa2025
   source:
-    repoURL: 'https://github.com/DobDoiDongDang/ipa2025-msapp.git'
+    repoURL: 'https://github.com/DobDoiDongDang/ipa2025-msapp'
     targetRevision: HEAD
     path: web/manifests
   destination:
@@ -16,6 +16,3 @@ spec:
     automated:
       prune: true
       selfHeal: true
-  clusterResourceWhitelist:
-  - group: '*'
-    kind: '*'
