--- a/web/manifests/ingress.yaml
+++ b/web/manifests/ingress.yaml
@@ -8,7 +8,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /
+          - path: /myweb
             pathType: Prefix
             backend:
               service:
