--- a/web/manifests/ingress.yaml
+++ b/web/manifests/ingress.yaml
@@ -6,9 +6,10 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - http:
+    - host: msapp.ipa
+      http:
         paths:
-          - path: /myweb
+          - path: /
             pathType: Prefix
             backend:
               service:
