--- a/worker/manifests/scaledobject.yaml
+++ b/worker/manifests/scaledobject.yaml
@@ -17,6 +17,6 @@ spec:
         mode: QueueLength
         value: "10"
         protocol: auto
-        host: amqp://rabbitmq
+        host: amqp://rabbitmq:5672
         usernameFromEnv: RABBITMQ_DEFAULT_USER
         passwordFromEnv: RABBITMQ_DEFAULT_PASS
