--- a/worker/manifests/scaledobject.yaml
+++ b/worker/manifests/scaledobject.yaml
@@ -17,6 +17,6 @@ spec:
         mode: QueueLength
         value: "10"
         protocol: auto
-        hostFromEnv: RABBITMQ_HOST
-        usernameFromEnv: RABBITMQ_DEFAULT_USER
-        passwordFromEnv: RABBITMQ_DEFAULT_PASS
+        hostFromEnv: RABBITMQ_HOST_URI
+#        usernameFromEnv: RABBITMQ_DEFAULT_USER
+#        passwordFromEnv: RABBITMQ_DEFAULT_PASS
